@@ -1,4 +1,8 @@
-2008-03-31  Andreas K. Foerster  <info@akfoerster.de>
+2008-04-04  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar.c (avt_auto_margin):
+	new function
+	(avt_forward, avt_initialize): use/set new variable auto_margin
 
 	* avatarsay.c (check_config_file):
 	keyword BACKGROUNDCOLOR
